src/objects/TractSetup__c.object
<CustomObject>
    <label>Gotransverse Setup</label>
    <nameField>
        <label>Gotransverse Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gotransverse Setups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Account_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox denote the user selected option to move billing account to TRACT. If the user chooses &quot;Automatically When a Salesforce Account is saved&quot;, this field is set to true and the account trigger is activated.</description>
        <label>Gotransverse Account Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Gotransverse Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Administrator_Email__c</fullName>
        <description>Usage Event generation report will be send to the following Email.</description>
        <inlineHelpText>Usage Event generation report will be send to the following Email.</inlineHelpText>
        <label>Administrator_Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Allow_Credit_Adjustments_Add__c</fullName>
        <label>GTV Allow Credit Adjustments Add</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Debit_Adjustments_Add__c</fullName>
        <label>Gotransverse Allow Debit Adjustments Add</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Invoice_Download__c</fullName>
        <label>Gotransverse Allow Invoice Download</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Services_Add_Address__c</fullName>
        <label>Gotransverse Allow Services Add Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Services_Change_Service__c</fullName>
        <label>GTV Allow Services Change Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Services_Deactivate__c</fullName>
        <label>Gotransverse Allow Services Deactivate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Services_Suspend__c</fullName>
        <label>Gotransverse Allow Services Suspend</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Services_Update_Quantity__c</fullName>
        <label>GTV Allow Services Update Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Api_Version__c</fullName>
        <label>Gotransverse Api Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Triggered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field store if a batch is currently in progress.</description>
        <label>Batch Triggered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Bill_Type__c</fullName>
        <label>Billing Account Bill Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Cycle_Name__c</fullName>
        <inlineHelpText>Enter a valid Billing Cycle Name for the adjoining Bill Cycle Type.</inlineHelpText>
        <label>Bill Cycle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Boolean01__c</fullName>
        <label>Boolean01</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Boolean02__c</fullName>
        <label>Boolean02</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configure__c</fullName>
        <label>Configure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Everything</fullName>
                </value>
                <value>
                    <fullName>TRACT Price Book</fullName>
                    <default>true</default>
                    <label>TRACT Price Book</label>
                </value>
                <value>
                    <fullName>TRACT Username - Password</fullName>
                </value>
                <value>
                    <fullName>Email Address Purpose</fullName>
                </value>
                <value>
                    <fullName>Billing Account Bill Type</fullName>
                </value>
                <value>
                    <fullName>TRACT Service Resources</fullName>
                </value>
                <value>
                    <fullName>Postal Address Purpose</fullName>
                </value>
                <value>
                    <fullName>Bill Cycle Name</fullName>
                </value>
                <value>
                    <fullName>Opportunities Stage</fullName>
                </value>
                <value>
                    <fullName>TRACT Sales Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_Tract_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this flag is selected then for every account created in Salesforce a corresponding account will be created in Tract</description>
        <inlineHelpText>Create Account in Tract when a Salesforce Account is created.</inlineHelpText>
        <label>Create Gotransverse Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomField__c</fullName>
        <inlineHelpText>Please select a Custom Field.</inlineHelpText>
        <label>Custom Field</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date01__c</fullName>
        <label>Date01</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date02__c</fullName>
        <label>Date02</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Start_Date__c</fullName>
        <label>Default Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Gotransverse Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Product__c</fullName>
        <label>Gotransverse Discount Product</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Address_Purpose__c</fullName>
        <inlineHelpText>Please Enter a valid Tract email Address Purpose</inlineHelpText>
        <label>Gotransverse Email Address Purpose</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error_Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Get_Account_Details_Via2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Get Account Details Via: GTV API Queri</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Get_Account_Details_Via3__c</fullName>
        <label>Gotransverse Get Account Details Via</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TRACT API Queries</fullName>
                </value>
                <value>
                    <fullName>TRACT Actions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Get_Account_Details_Via__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Get Account Details Via: GTV Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mapped_Custom_Field_Id__c</fullName>
        <description>This field store the id of custom field selected by the user on billing tab.</description>
        <label>Mapped Custom Field Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number01__c</fullName>
        <label>Number01</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number02__c</fullName>
        <label>Number02</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <inlineHelpText>Select the Opportunity Stages for Placing of a Tract Sales Order.</inlineHelpText>
        <label>Opportunity Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospecting</fullName>
                </value>
                <value>
                    <fullName>Qualification</fullName>
                </value>
                <value>
                    <fullName>Needs Analysis</fullName>
                </value>
                <value>
                    <fullName>Value Proposition</fullName>
                </value>
                <value>
                    <fullName>Id. Decision Makers</fullName>
                </value>
                <value>
                    <fullName>Perception Analysis</fullName>
                </value>
                <value>
                    <fullName>Proposal Quote</fullName>
                </value>
                <value>
                    <fullName>Negotiation</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                    <default>true</default>
                    <label>Closed Won</label>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderStatusHelpText__c</fullName>
        <inlineHelpText>Please Select a Order Status.</inlineHelpText>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FINAL</fullName>
                </value>
                <value>
                    <fullName>DRAFT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderStatus__c</fullName>
        <label>Gotransverse OrderStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Address_Purpose__c</fullName>
        <inlineHelpText>Enter the valid Postal Address Purpose for creation of a Billing Account.</inlineHelpText>
        <label>Gotransverse Postal Address Purpose</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceResourceId__c</fullName>
        <label>Service Resource Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceResourceType__c</fullName>
        <label>Service Resource Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Account_Configurations_Section__c</fullName>
        <label>GTV Show Account Configuration Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Activity_Events_Section__c</fullName>
        <label>GTV Show Activity Events Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Billing_Address_Section__c</fullName>
        <label>GTV Show Billing Address Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Contract_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gotransverse Show Contract Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Credit_Adjustments_Section__c</fullName>
        <label>GTV Show Credit Adjustments Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Debit_Adjustments_Section__c</fullName>
        <label>GTV Show Debit Adjustments Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Invoices_Section__c</fullName>
        <label>Gotransverse Show Invoices Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Payments_Section__c</fullName>
        <label>Gotransverse Show Payments Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Sales_Orders_Section__c</fullName>
        <label>Gotransverse Show Sales Orders Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Services_Section__c</fullName>
        <label>Gotransverse Show Services Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Shipping_Address_Section__c</fullName>
        <label>GTV Show Shipping Address Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_SFDC_Account_Id__c</fullName>
        <label>Gotransverse Store SFDC Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text01__c</fullName>
        <label>Text01</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text02__c</fullName>
        <label>Text02</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text03__c</fullName>
        <label>Text03</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPassword__c</fullName>
        <label>Gotransverse TPassword</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TractBillCycleType__c</fullName>
        <label>Gotransverse BillCycleType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TractBillCycle__c</fullName>
        <label>Bill Cycle Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TractBillingAccountCategoryName__c</fullName>
        <description>To be used Internally</description>
        <label>Gotransverse BillingAccountCategoryName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TractBillingAccountCategory__c</fullName>
        <label>Billing Account Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TractBillType__c</fullName>
        <label>Bill Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TractPriceBookID__c</fullName>
        <label>Gotransverse PriceBookID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tract_Password__c</fullName>
        <label>Gotransverse Password</label>
        <length>40</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Tract_Products_Added__c</fullName>
        <label>Gotransverse Products Added</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tract_Products_Updated__c</fullName>
        <label>Gotransverse Products Updated</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRACT_URL2_0__c</fullName>
        <label>Gotransverse URL2.0</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TRACT_URL__c</fullName>
        <defaultValue>&quot;https://tract-qa.gotransverse.com&quot;</defaultValue>
        <description>TRACT Servere URL</description>
        <inlineHelpText>Please provide a correct TRACT URL. Ex https://my.tractbilling.com</inlineHelpText>
        <label>Gotransverse URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Tract_User_Name__c</fullName>
        <defaultValue>&quot;algo-sales&quot;</defaultValue>
        <inlineHelpText>Enter a valid Tract server Username.</inlineHelpText>
        <label>Gotransverse User Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UrlVersion__c</fullName>
        <label>Gotransverse UrlVersion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UsageUom__c</fullName>
        <label>UsageUom</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usage_Amount__c</fullName>
        <label>Usage Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X_API_Key__c</fullName>
        <description>This field is use to store the API key</description>
        <label>X-API-Key</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>